--- a/index.html
+++ b/index.html
@@ -5,12 +5,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--nuevamente el CSS está minimizado-->
         <style>
-            *,::after,::before{margin:0;padding:0;box-sizing:border-box}body{color:#222;background:#eee;font-family:Helvetica,sans-serif;font-size:.9rem}h1{margin-bottom:1rem;font-size:calc(1.5rem + 1vw)}#app{width:min(80vw,500px);padding:2rem 2rem 0;background:#fff;box-shadow:0 0 4px rgba(100,100,100,.1);position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);border-radius:.8rem}select{width:100%;padding:.5rem;color:#888;border-color:#ddd;border-radius:.4rem;box-shadow:inset 0 0 2px rgba(0,0,0,.1)}#resultado{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;padding:1rem 0}
+            *,
+::after,
+::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    color: #222;
+    background: #eee url("fondo.jpg") 0 0 no-repeat;
+    background-size:cover; 
+    font-family: Helvetica, sans-serif;
+    font-size: 0.9rem;
+}
+h1 {
+    margin-bottom: 1rem;
+    font-size: calc(1.5rem + 1vw);
+}
+#app {
+    width: min(80vw, 500px);
+    padding: 2rem 2rem 0;
+    background: #fff;
+    box-shadow: 0 0 4px rgba(100, 100, 100, 0.1);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 0.8rem;
+}
+select {
+    width: 100%;
+    padding: 0.5rem;
+    color: #888;
+    border-color: #ddd;
+    border-radius: 0.4rem;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+}
+#resultado {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+}
+
         </style>
     </head>
     <body>
         <div id="app">
-            <h1 id="lugar">Chile</h1>
+            <h1 id="lugar">Rusia</h1>
             <select name="select" id="selector" disabled>
                 <option>Selecciona una ciudad…</option>
             </select>
@@ -18,13 +62,14 @@
         </div>
         <!--esto es sin bibliotecas-->
         <script>
+            const todo = document.querySelector("#app")
             const titulo = document.querySelector("#lugar");
             const seleccionado = document.querySelector("#selector");
             const respuesta = document.querySelector("#resultado");
             //creando la función cities
             async function cities() {
                 seleccionado.disabled = false;
-                const primero = await fetch("https://raw.githubusercontent.com/profesorfaco/dno037-2023-2/main/clase-06/ciudades.json");
+                const primero = await fetch("https://raw.githubusercontent.com/Daviidfdezz/dnmclase06/main/Cityrusia.json");
                 const ciudades = await primero.json();
                 console.log(ciudades);
                 ciudades.forEach((c) => (seleccionado.innerHTML += `<option>${c.name}</option>`));
@@ -33,10 +78,17 @@
             cities().catch((error) => console.error(error));
             //creando la función weather
             async function weather(ciudad) {
-                const segundo = await fetch("https://api.openweathermap.org/data/2.5/weather?q=" + ciudad + ",cl&units=metric&appid=b9ada855dda797faa021585f396c4261&lang=es");
+                const segundo = await fetch("https://api.openweathermap.org/data/2.5/weather?q=" + ciudad + ",ru&units=metric&appid=b9ada855dda797faa021585f396c4261&lang=es");
                 const tiempo = await segundo.json();
                 console.log(tiempo);
-                respuesta.innerHTML = `<div><img src="https://openweathermap.org/img/wn/${tiempo.weather[0].icon}.png"></div><div>Temperatura: <strong>${tiempo.main.temp}</strong> ºC</div><div>Humedad: <strong>${tiempo.main.humidity}</strong>%&nbsp;&nbsp;</div><div>Presion: <strong>${tiempo.main.pressure}</strong> ºC</div>`;
+       if(tiempo.main.temp>20){
+                todo.style.background = "#f58080";
+                } else if(tiempo.main.temp<21 && tiempo.main.temp>15){
+                todo.style.background = "#00bfe3";
+                } else{
+                todo.style.background = "#16c164";   
+                }
+                respuesta.innerHTML = `<div><img src="https://openweathermap.org/img/wn/${tiempo.weather[0].icon}.png"></div><div>Temperatura: <strong>${tiempo.main.temp}</strong> ºC</div><div>Humedad: <strong>${tiempo.main.humidity}</strong>%&nbsp;&nbsp;</div><div>Presion: <strong>${tiempo.main.pressure}</strong> mbar</div>`;
             }
             seleccionado.addEventListener("change", function (event) {
                 let valor = seleccionado.value;
